updated css file and remove images

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <p class="purpose">Purpose: Laptop Purchase</p>
         <p class="date">Created June 23, 2020</p>
     </div>
+
     <div class="video">
-        <img src="images/vd-logo.png" alt="" srcset="" class="vd-logo1">
-        <img src="images/vd-logo1.png" alt="" srcset="" class="vd-logo2">
+        <img src="https://i.ibb.co/XWbGcwX/vd-logo.png" alt="" srcset="" class="vd-logo1">
+        <img src="https://i.ibb.co/LSxsPMd/vd-logo1.png" alt="" srcset="" class="vd-logo2">
     </div>
 
     <!-- right side -->
@@ -71,10 +72,10 @@
       <div>
           <h3 class="voucher-title">Vouchers</h3>
           <div class="voucher-line">
-              <img src="images/voucher.png" alt="" sizes="" class="voucher">
-              <img src="images/voucher.png" alt="" sizes="" class="voucher">
-              <img src="images/voucher.png" alt="" sizes="" class="voucher">
-              <img src="images/voucher.png" alt="" sizes="" class="voucher">
+              <img src="https://i.ibb.co/m4zFQCc/voucher.png" alt="" sizes="" class="voucher">
+              <img src="https://i.ibb.co/m4zFQCc/voucher.png" alt="" sizes="" class="voucher">
+              <img src="https://i.ibb.co/m4zFQCc/voucher.png" alt="" sizes="" class="voucher">
+              <img src="https://i.ibb.co/m4zFQCc/voucher.png" alt="" sizes="" class="voucher">
               <i class="fas fa-chevron-right next" id="next"></i>
               <!-- <i class="fas fa-chevron-right prev" ></i> -->
           </div>
